projects/bot_eval_run/run_1768561477879/iterations/04/cmd_python_-m_compileall_-q_mini_ai_tests.stdout.txt
*** Error compiling 'mini_ai\\generator.py'...
  File "mini_ai\generator.py", line 1
    def generate(model_path):\n    # Implementace generovani textu z Markovova lincova
                              ^
SyntaxError: unexpected character after line continuation character

